--- a/test-data/FV2021-Coleopteran.yaml
+++ b/test-data/FV2021-Coleopteran.yaml
@@ -93,7 +93,7 @@
       details: |
         Size 2: Medium: +2 to be hit for every size attacker is
         smaller, -2 to be hit for every size attack is larger, 1.5-8
-        tonnes, big horse to bigger than an elephant.
+        tonnes, big horse to bigger than an elephant
     - name: Conditional Ownership
       rank: 1
       points: -1
