Switch from fmt egg to schemepunk egg library (schemepunk show) (SRFI 166).
This is so that Unicode MINUS doesn't cause fmt to blow up.

Also use Unicode MINUS for enhancements, so it looks right when typeset.

--- a/test-data/cabbit-battle.yaml
+++ b/test-data/cabbit-battle.yaml
@@ -60,7 +60,11 @@
       level: 5
       effective: 1
       points: 10
-      details: "Drain: Soul -1; Penetrating -1; Range -1; Spreading -1"
+      enhancements:
+        - "Drain: Soul"
+        - Penetrating
+        - Range
+        - Spreading
   defects:
     - name: Easily Distracted
       rank: 1
