--- a/test-data/FV2021-Coleopteran.yaml
+++ b/test-data/FV2021-Coleopteran.yaml
@@ -5,7 +5,7 @@
     the Canadians on Mars.  They use a new “mind-interface”
     neuro-helmet that makes the mecha very agile.  However, if a
     different pilot wants to use the mecha, the neuro-helmet must be
-    “retuned” to their brain waves - this takes a full day; until
+    “retuned” to their brain waves — this takes a full day; until
     then, halve the Defence Mastery and Combat Technique: Lightning
     Reflexes Attribute bonuses.  The mecha are painted standard
     colours: UN white, with sky-blue helmets.
@@ -58,8 +58,8 @@
       level: 12
       effective: 9
       points: 24
-      details: "Damage Modifier *9; Range 10 km; fails on natural 2 or 3"
-      enhancers:
+      details: "Damage Modifier ×9; Range 10 km; fails on natural 2 or 3"
+      enhancements:
         - [Range, 5]
       limiters:
         - [Unreliable, 2]
@@ -68,11 +68,11 @@
       effective: 9
       points: 14
       details: |
-        Damage Modifier *9; 1 hit if attack >0-3, 2 hits if >4-6, 3
-        hits if >7-9, etc.; Area 3m radius; Range 1 km; 3 shots; Can
+        Damage Modifier *9; 1 hit if attack >0–3, 2 hits if >4–6, 3
+        hits if >7–9, etc.; Area 3m radius; Range 1 km; 3 shots; Can
         be deflected or destroyed for 1 round; Alternate attack: cost
         halved
-      enhancers:
+      enhancements:
         - [Autofire, 3]
         - Area
         - [Range, 4]
@@ -83,7 +83,7 @@
       level: 11
       effective: 12
       points: 11
-      details: Melee; Damage Modifier *12; 6 shots
+      details: Melee; Damage Modifier ×12; 6 shots
       limiters:
         - Charges
   defects:
@@ -99,5 +99,5 @@
       points: -4
       details: |
         Size 2: Medium: +2 to be hit for every size attacker is
-        smaller, -2 to be hit for every size attack is larger, 1.5-8
+        smaller, −2 to be hit for every size attack is larger, 1.5–8
         tonnes, big horse to bigger than an elephant
