First version with besm2-rst and corresponding changes to test data.
Renamed test data to *-4e.yaml and *-2e.yaml so make could use
different programs for the different editions.

--- a/test-data/android-battle-maid-4e.yaml
+++ b/test-data/android-battle-maid-4e.yaml
@@ -34,7 +34,7 @@
       details: 10 * Body metres
     - name: "Power Flux: Skill Flux"
       level: 1
-      effecttive: 2
+      effective: 2
       points: 10
       details: "Equipment: Programmes +1"
     - name: Resilient
